2010-05-02  Tasuku Suzuki  <tasuku.suzuki@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] Fix compilation with QT_NO_LINEEDIT
        https://bugs.webkit.org/show_bug.cgi?id=38324

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::~RenderThemeQt):
        (WebCore::RenderThemeQt::findFrameLineWidth):

Canonical link: https://commits.webkit.org/49914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58659 268f45cc-cd09-0410-ab3c-d52691b4dbfc